Revised Using Colab

--- a/Colab+GithubPractice.ipynb
+++ b/Colab+GithubPractice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMK/MYCVs5uXUP1Utq/CKJd",
+      "authorship_tag": "ABX9TyO49YD7LCsfz0aPtvBOt+Wv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,9 @@
       "cell_type": "markdown",
       "source": [
         "#Colab과 Github 연동하기\n",
-        "Let's learn how to use Colab and Github together:)"
+        "Let's learn how to use Colab and Github together:)\n",
+        "\n",
+        "수정사항을 업데이트 해보겠습니다."
       ],
       "metadata": {
         "id": "5wkF_HnMCo_p"
@@ -56,7 +58,7 @@
         }
       ],
       "source": [
-        "print(\"Hello Colab and Github\")"
+        "print(\"Bye Colab and Github\")"
       ]
     }
   ]
