Update new output

--- a/Colab+GithubPractice.ipynb
+++ b/Colab+GithubPractice.ipynb
@@ -40,20 +40,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2DgcJ3AbBOHv",
-        "outputId": "382d2760-8ff1-4d97-e4be-5e7b8dfc198f"
+        "outputId": "c4ad60a7-1a57-4254-de15-a8019a3dc0bb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello Colab and Github\n"
+            "Bye Colab and Github\n"
           ]
         }
       ],
